# SoftwareEngineeringENSG

./: CMakeLists.txt  README.md  hello.cpp
cmake/: HelloProjConfig.cmake.in
mains/: hello.cpp
src/basic/: CMakeLists.txt
tests/: CMakeLists.txt  test_hello.cpp
